<resources>
    <string name="app_name">QR Door Manager</string>
    <string name="string_email_phoneNumber">Email or phone number</string>
    <string name="string_password">Password</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="name_label">Name:</string>
    <string name="email">Email</string>
    <string name="email_label">Email:</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_label">Phone Number:</string>
    <string name="mssv">MSSV</string>
    <string name="mssv_label">MSSV:</string>
    <string name="change_password">Change Password</string>
    <string name="qr_image">QR Image</string>
    <string name="logout">Logout</string>
    <string name="tickets">Tickets</string>
    <string name="profile">Profile</string>
    <string name="qr_code">QR Code</string>
    <string name="loading">Loading…"</string>
    <string name="qr_app">QR App</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="reason">Reason</string>
    <string name="select_door">Select Door</string>
    <string name="send_ticket">Send Ticket</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="scan_qr">Scan QR</string>
    <string name="date_choose">DateChoose</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="setting">Setting</string>
    <string name="biometric_setting">Biometric</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="this_operation_cannot_be_undone">This operation cannot be undone.</string>"
    <string name="door">Door</string>
    <string name="plus">+</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="reject">Reject</string>
    <string name="id_door">ID Door</string>
    <string name="id_account">ID Account</string>
    <string name="id_account_create">ID Account Create</string>
    <string name="position">Position</string>
    <string name="created_at">Created At</string>
    <string name="status">Status</string>
    <string name="last_updated">Last updated</string>
    <string name="accept">Accept</string>
    <string name="id_ticket">ID Ticket</string>
    <string name="create_door">Create Door</string>
    <string name="mac_address">MAC Address</string>
    <string name="config">Config</string>"
    <string name="status_not_connected">Status: Not Connected</string>
    <string name="connect_to_esp32">Connect to ESP32</string>
    <string name="enter_wi_fi_password">Enter Wi-Fi Password</string>
    <string name="send_wi_fi_credentials">Send Wi-Fi Credentials</string>
    <string name="scan_wifi">Scan wifi</string>
    <string name="select_wifi">Select wifi</string>
    <string name="select_board">Select board</string>
    <string name="scan_bluetooth_device">Scan bluetooth device</string>
    <string name="ip_mqtt_server">IP MQTT Server</string>
    <string name="send_mqtt_credentials">Send MQTT credentials</string>
    <string name="register_card">Register RFID card</string>
    <string name="remove_card">Remove RFID card</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="wifi">Wifi</string>
    <string name="mqtt">MQTT</string>
    <string name="rfid">RFID</string>
</resources>