<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="640dp"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="600dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/door_config_txt_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/status_not_connected"
            android:textSize="16sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/select_board"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/door_config_spinner_bluetooth_list"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/spinner_with_arrow" />

        <Button
            android:id="@+id/door_config_btnScanBluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxWidth="320dp"
            android:text="@string/scan_bluetooth_device" />

        <Button
            android:id="@+id/door_config_btn_connect_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxWidth="320dp"
            android:text="@string/connect_to_esp32" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/select_wifi"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/door_config_spinner_wifi_list"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/spinner_with_arrow" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/username_layout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/door_config_edt_wifi_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_wi_fi_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/door_config_btn_scan_wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxWidth="320dp"
            android:text="@string/scan_wifi" />

        <Button
            android:id="@+id/door_config_btn_send_wifi_cre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxWidth="320dp"
            android:text="@string/send_wi_fi_credentials" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/username_layout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/door_config_edt_mqtt_ip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/ip_mqtt_server"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/door_config_btn_send_mqtt_cre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxWidth="320dp"
            android:text="@string/send_mqtt_credentials" />

        <Button
            android:id="@+id/door_config_btn_register_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxWidth="320dp"
            android:text="@string/register_card" />

        <Button
            android:id="@+id/door_config_btn_remove_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxWidth="320dp"
            android:text="@string/remove_card" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layoutDirection="rtl"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/door_config_btn_cancel"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/red"
                android:maxLines="1"
                android:padding="0dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="10sp"
                tools:ignore="SmallSp">

            </com.google.android.material.button.MaterialButton>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
