<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="360dp"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ticket_detail_idTicket"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:enabled="false"
            android:hint="@string/id_ticket" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ticket_detail_positionDoor"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:enabled="false"
            android:hint="@string/position" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ticket_detail_fullName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:enabled="false"
            android:hint="@string/name" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ticket_detail_startTime"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/start_time" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ticket_detail_endTime"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:enabled="false"
            android:hint="@string/end_time" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ticket_detail_reason"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:enabled="false"
            android:hint="@string/reason" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ticket_detail_createdAt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:enabled="false"
            android:hint="@string/created_at" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ticket_detail_status"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:enabled="false"
            android:hint="@string/status" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layoutDirection="rtl"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ticket_detail_btn_cancel"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:maxLines="1"
            android:padding="0dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="10sp"
            tools:ignore="SmallSp">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ticket_detail_btn_accept"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/dark_green"
            android:maxLines="1"
            android:padding="0dp"
            android:text="@string/accept"
            android:textColor="@color/white"
            android:textSize="10sp"
            tools:ignore="SmallSp">

        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

</LinearLayout>