<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:minWidth="360dp"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ticket_door_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_door"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/ticket_door_spinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/spinner_with_arrow" />

    <LinearLayout
        android:id="@+id/ticket_start_date_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ticket_start_date_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:hint="@string/start_time"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ticket_btn_start_date"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/date_choose"
            android:padding="12dp"
            android:src="@drawable/calendar" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ticket_end_date_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ticket_end_date_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:hint="@string/end_time"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ticket_btn_end_date"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/date_choose"
            android:padding="12dp"
            android:src="@drawable/calendar" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ticket_reason_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ticket_reason_input"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="top"
            android:hint="@string/reason"
            android:inputType="textMultiLine"
            android:textColorHint="#616161" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ticket_btn_cancel"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:maxLines="1"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ticket_btn_send_ticket"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:maxLines="1"
            android:text="@string/send_ticket"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>