<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:minWidth="360dp"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/door_id_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/door_mac_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:hint="@string/mac_address"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/door_btn_id"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/qr_code"
            android:padding="12dp"
            android:src="@drawable/qr_code" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/door_position_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:baselineAligned="false">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/door_position_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/position"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/door_btn_cancel"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:maxLines="1"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/door_btn_create_door"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:maxLines="1"
            android:text="@string/create_door"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>